Updated README.md for Diktat 2.0
### What's done:
- updated section about CLI
- updated sections for plugins

It closes #1793